Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,6 +17,10 @@ variables:
 steps:
 - task: NuGetToolInstaller@1
 
+- task: NuGetAuthenticate@0
+  inputs:
+    nuGetServiceConnections: 'AVEVA-SandT'
+
 - task: NuGetCommand@2
   inputs:
     command: 'restore'
