--- a/Grail/App.config
+++ b/Grail/App.config
@@ -11,7 +11,7 @@
     <applicationSettings>
         <Grail.Properties.Settings>
             <setting name="ReleasePath" serializeAs="String">
-                <value>\\ukcamsfs\EBU\EDMPlatform\Tools</value>
+                <value>https://platformtools.blob.core.windows.net/grail/</value>
             </setting>
             <setting name="UpdateTimeout" serializeAs="String">
                 <value>30</value>
