--- a/Grail/Grail.csproj
+++ b/Grail/Grail.csproj
@@ -106,7 +106,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="SquirrelNutkin">
-      <Version>2.0.10</Version>
+      <Version>2.1.0-supportWebPaths25</Version>
     </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
