--- a/Grail/Properties/Settings.settings
+++ b/Grail/Properties/Settings.settings
@@ -3,7 +3,7 @@
   <Profiles />
   <Settings>
     <Setting Name="ReleasePath" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">\\ukcamsfs\EBU\EDMPlatform\Tools</Value>
+      <Value Profile="(Default)">https://platformtools.blob.core.windows.net/grail/</Value>
     </Setting>
     <Setting Name="UpdateTimeout" Type="System.Int32" Scope="Application">
       <Value Profile="(Default)">30</Value>
