--- a/Grail/Grail.csproj
+++ b/Grail/Grail.csproj
@@ -59,7 +59,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Page Include="MainWindow.xaml">
+    <Page Include="View\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -67,7 +67,21 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="MainWindow.xaml.cs">
+    <Compile Include="Helpers\Arguments.cs" />
+    <Compile Include="Helpers\BaseViewModel.cs" />
+    <Compile Include="Helpers\CommandExecutor.cs" />
+    <Compile Include="Helpers\Expression.cs" />
+    <Compile Include="Helpers\Extensions.cs" />
+    <Compile Include="Helpers\Keyed.cs" />
+    <Compile Include="Helpers\ObservableCollectionEx.cs" />
+    <Compile Include="Helpers\RelayCommand.cs" />
+    <Compile Include="ViewModel\Converters\BoolToVisibilityConverter.cs" />
+    <Compile Include="ViewModel\Converters\EnumBindingSourceExtension.cs" />
+    <Compile Include="ViewModel\Converters\EnumerableToCountConverter.cs" />
+    <Compile Include="ViewModel\Converters\InverseBooleanConverter.cs" />
+    <Compile Include="ViewModel\Converters\ObjectNotNullIsVisible.cs" />
+    <Compile Include="ViewModel\MainWindowViewModel.cs" />
+    <Compile Include="View\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
@@ -99,14 +113,17 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="grail.png" />
+    <Resource Include="View\grail.png" />
   </ItemGroup>
   <ItemGroup>
     <Resource Include="grail.ico" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="JetBrains.Annotations">
+      <Version>2019.1.3</Version>
+    </PackageReference>
     <PackageReference Include="SquirrelNutkin">
-      <Version>2.1.0-supportWebPaths25</Version>
+      <Version>2.1.0-supportWebPaths26</Version>
     </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
