--- a/Grail/Properties/Settings.settings
+++ b/Grail/Properties/Settings.settings
@@ -8,5 +8,8 @@
     <Setting Name="UpdateTimeout" Type="System.Int32" Scope="Application">
       <Value Profile="(Default)">30</Value>
     </Setting>
+    <Setting Name="LocalReleasePath" Type="System.String" Scope="User">
+      <Value Profile="(Default)">\\ukcamsfs_NOT\EBU\EDMPlatform\Tools\Grail</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
